Liberando parcialmente o acesso total do aplicativo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
     </div>
 
-    <meta http-equiv="refresh" content="2; URL='paginas/login/login.php'"/>
+    <!-- Ir para o home -->
+    <meta http-equiv="refresh" content="2; URL='paginas/home/homeadm.php'"/>
 
     <!-- Inclua o JS do Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
