Redirecionando para o portfolio, para atribuir um usuario default

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <meta http-equiv="refresh" content="2; URL='paginas/login/login.php'"/>
+    <meta http-equiv="refresh" content="2; URL='paginas/portfolio/index.php'"/>
 
     <!-- Inclua o JS do Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
